--- a/.github/workflows/daily_summary.yml
+++ b/.github/workflows/daily_summary.yml
@@ -80,50 +80,33 @@ jobs:
             printf "leads_md<<EOF\n%s\nEOF\n" "$leads_md" >> "$GITHUB_OUTPUT"
           attempt_limit: 24     # Retry up to 24 times (10-min interval) like other jobs
           attempt_delay: 600000 # 10-minute pause (ms)
+          
+      - name: Log fetched results
+        run: |
+          echo "=== Pending Tasks (raw markdown) ==="
+          echo "${{ steps.fetch.outputs.pending_tasks_md }}"
+          echo ""
+          echo "=== Leads (raw markdown) ==="
+          echo "${{ steps.fetch.outputs.leads_md }}"
 
   notify:
     needs: fetch-summary
     runs-on: ubuntu-latest
     if: ${{ success() }}
     steps:
-      - name: Compose HTML email body
+      - name: Prepare email body
+        id: prep_email
         run: |
           SUMMARY_DATE=$(date -u +"%Y-%m-%d %H:%M UTC")
-          # Decode %0A into real newlines for tasks and leads
-          TASKS=$(echo "${{ needs.fetch-summary.outputs.tasks }}" | sed 's/%0A/\n/g')
-          LEADS=$(echo "${{ needs.fetch-summary.outputs.leads }}" | sed 's/%0A/\n/g')
-          # Convert "- item" markdown to <ul><li> list
-          list_to_html() {
-            local input="$1"
-            if [ -z "$input" ] || [ "$input" = "No pending tasks found." ] || [ "$input" = "No leads found." ]; then
-              echo "<p><em>$input</em></p>"
-              return
-            fi
-            echo "<ul>";
-            while IFS= read -r line; do
-              trimmed="${line#*- }"  # remove leading '- '
-              echo "  <li>$trimmed</li>";
-            done <<< "$input"
-            echo "</ul>";
-          }
-
-          TASKS_HTML=$(list_to_html "$TASKS")
-          LEADS_HTML=$(list_to_html "$LEADS")
-
-          {
-            echo "<!DOCTYPE html>"
-            echo "<html lang=\"en\">"
-            echo "<head><meta charset=\"UTF-8\"><title>Daily Summary</title></head>"
-            echo "<body style=\"font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Helvetica,Arial,sans-serif;line-height:1.6;color:#2D3748;\">"
-            echo "<div style=\"max-width:600px;margin:40px auto;padding:40px;background:#fff;border-radius:12px;box-shadow:0 4px 6px rgba(0,0,0,0.05);\">"
-            echo "<h1 style=\"text-align:center;color:#1A365D;\">Daily Summary ($SUMMARY_DATE)</h1>"
-            echo "<h2 style=\"color:#1A365D;\">Pending Tasks</h2>"
-            echo "$TASKS_HTML"
-            echo "<h2 style=\"color:#1A365D;\">Leads</h2>"
-            echo "$LEADS_HTML"
-            echo "<p>Have a great day!</p>"
-            echo "</div></body></html>"
-          } > email_body.html
+          printf "body<<EOF\n" >> "$GITHUB_OUTPUT"
+          printf "Hello AGM team,\n\n" >> "$GITHUB_OUTPUT"
+          printf "Here is the daily summary as of $SUMMARY_DATE:\n\n" >> "$GITHUB_OUTPUT"
+          printf "**Pending Tasks**\n\n" >> "$GITHUB_OUTPUT"
+          printf "%s\n\n" "${{ needs.fetch-summary.outputs.tasks }}" >> "$GITHUB_OUTPUT"
+          printf "**Leads**\n\n" >> "$GITHUB_OUTPUT"
+          printf "%s\n\n" "${{ needs.fetch-summary.outputs.leads }}" >> "$GITHUB_OUTPUT"
+          printf "Have a great day!\n" >> "$GITHUB_OUTPUT"
+          printf "EOF\n" >> "$GITHUB_OUTPUT"
 
       - name: Send daily summary email
         uses: dawidd6/action-send-mail@v3
@@ -135,7 +118,7 @@ jobs:
           subject: "📬 Daily Pending Tasks & Leads Summary"
           to: aa@agmtechnology.com,cr@agmtechnology.com
           from: aa@agmtechnology.com
-          html_body: file://email_body.html
+          body: ${{ steps.prep_email.outputs.body }}
 
   notify-failure:
     needs: fetch-summary
