--- a/.github/workflows/daily_summary.yml
+++ b/.github/workflows/daily_summary.yml
@@ -51,8 +51,8 @@ jobs:
               exit 1
             fi
 
-            # Extract markdown list of pending tasks (id and title if present)
-            pending_tasks_md=$(echo "$tasks_body" | jq -r '.pending_tasks[] | "- [" + (.id // "n/a") + "] " + (.title // .task // "Unnamed Task")')
+            # Extract plain list of pending task descriptions (one per line)
+            pending_tasks_md=$(echo "$tasks_body" | jq -r '.pending_tasks[] | .description')
             # Debug: print raw JSON for inspection
             echo "==== Raw Pending Tasks JSON ===="
             echo "$tasks_body"
@@ -62,26 +62,8 @@ jobs:
             fi
 
             # ─────────────────────────────────────────────────────────────
-            # 3. Fetch Leads
-            response=$(curl -s -w "\n%{http_code}" -X GET \
-              -H "Authorization: Bearer $access_token" \
-              https://api.agmtechnology.com/leads/read)
-            http_status=$(echo "$response" | tail -n1)
-            leads_body=$(echo "$response" | sed '$d')
-            if [ "$http_status" != "200" ]; then
-              echo "Fetching leads failed with status $http_status" >&2
-              exit 1
-            fi
-
-            leads_md=$(echo "$leads_body" | jq -r '.leads[] | "- [" + (.id // "n/a") + "] " + (.name // .email // "Unnamed Lead")')
-            if [ -z "$leads_md" ]; then
-              leads_md="No leads found."
-            fi
-
-            # ─────────────────────────────────────────────────────────────
             # 4. Pass markdown lists to next job via step outputs
             printf "pending_tasks_md<<EOF\n%s\nEOF\n" "$pending_tasks_md" >> "$GITHUB_OUTPUT"
-            printf "leads_md<<EOF\n%s\nEOF\n" "$leads_md" >> "$GITHUB_OUTPUT"
           attempt_limit: 24     # Retry up to 24 times (10-min interval) like other jobs
           attempt_delay: 600000 # 10-minute pause (ms)
           
@@ -90,8 +72,6 @@ jobs:
           echo "=== Pending Tasks (raw markdown) ==="
           echo "${{ steps.fetch.outputs.pending_tasks_md }}"
           echo ""
-          echo "=== Leads (raw markdown) ==="
-          echo "${{ steps.fetch.outputs.leads_md }}"
 
   notify:
     needs: fetch-summary
@@ -107,8 +87,6 @@ jobs:
           printf "Here is the daily summary as of $SUMMARY_DATE:\n\n" >> "$GITHUB_OUTPUT"
           printf "**Pending Tasks**\n\n" >> "$GITHUB_OUTPUT"
           printf "%s\n\n" "${{ needs.fetch-summary.outputs.tasks }}" >> "$GITHUB_OUTPUT"
-          printf "**Leads**\n\n" >> "$GITHUB_OUTPUT"
-          printf "%s\n\n" "${{ needs.fetch-summary.outputs.leads }}" >> "$GITHUB_OUTPUT"
           printf "Have a great day!\n" >> "$GITHUB_OUTPUT"
           printf "EOF\n" >> "$GITHUB_OUTPUT"
 
@@ -119,7 +97,7 @@ jobs:
           server_port: 465
           username: ${{ secrets.EMAIL_USERNAME }}
           password: ${{ secrets.EMAIL_PASSWORD }}
-          subject: "📬 Daily Pending Tasks & Leads Summary"
+          subject: "📬 Daily Pending Tasks Summary"
           to: aa@agmtechnology.com,cr@agmtechnology.com
           from: aa@agmtechnology.com
           body: ${{ steps.prep_email.outputs.body }}
@@ -140,4 +118,4 @@ jobs:
           to: aa@agmtechnology.com,cr@agmtechnology.com
           from: aa@agmtechnology.com
           body: |
-            The daily pending tasks and leads summary workflow failed. Please review the workflow logs for details.
+            The daily pending tasks summary workflow failed. Please review the workflow logs for details.
